Fixed overflow

--- a/scss/style.sass
+++ b/scss/style.sass
@@ -2,15 +2,17 @@
 $bg-fcolor: #161c26
 $bg-scolor: #1f2630
 =keyframes($animation-name)
-  @-webkit-keyframes #{$animation-name}
-    @content
-  @-moz-keyframes #{$animation-name}
-    @content
-  @keyframes #{$animation-name}
-    @content
+    @-webkit-keyframes #{$animation-name}
+        @content
+    @-moz-keyframes #{$animation-name}
+        @content
+    @keyframes #{$animation-name}
+        @content
 *
     font-family: "Sen", sans-serif !important
 html
+    overflow: hidden
+    overflow: -moz-hidden-unscrollable
     background: -webkit-radial-gradient($bg-scolor 0%, $bg-fcolor 100%)
     background: radial-gradient($bg-scolor 0%, $bg-fcolor 100%)
     background-color: $bg-fcolor
@@ -29,7 +31,7 @@ section
     transition: 0.4s ease-in
     transform: scale(1)
     transition-delay: 0.4s
-    
+
 .nav-bar
     display: flex
     justify-content: center
@@ -162,7 +164,7 @@ section
             color: #fff
             margin-bottom: 2rem
         ul
-        text-align: left !important
+            text-align: left !important
         .bar
             list-style: none !important
 
@@ -184,7 +186,7 @@ section
             display: block
             border-radius: 3px
             transition: 2s
-            
+
 .slide-3
     grid-area: slide
     grid-template-areas: "text" "cards"
@@ -211,13 +213,13 @@ section
         display: grid
         grid-template-rows: 1fr 1fr
         transition: 0.3s all
-    h3 
+    h3
         color: white
         font-size: 24px
         margin: 20px 0 0 20px
         filter: opacity(0)
         transition: 0.3s all
-    p 
+    p
         color: white
         font-weight: 400
         font-size: 16px
@@ -226,7 +228,7 @@ section
         letter-spacing: 0.5px
         filter: opacity(0)
         transition: 0.3s all
-    img 
+    img
         position: absolute
         top: 5%
         bottom: 5%
@@ -235,15 +237,14 @@ section
         z-index: 0
         transition: 0.3s all
 
-
 .ease
     opacity: 0!important
-    transition:1s!important
-@keyframes light 
-    0%  
+    transition: 1s!important
+@keyframes light
+    0%
         opacity: 0.4
-    50% 
+    50%
         opacity: 1
-    100% 
+    100%
         opacity: 0.4
 @import "media.sass"
